# aoc2019

./: .gitignore  404.html  index.html  pyproject.toml  real_mkdocs.yml  sitemap.xml
.github/workflows/: build_docs.yaml
aoc2019/: aoc2019.py  base.py  solutions.ipynb
solutions/: day1.ipynb  day2.ipynb  index.html
