[tool.poetry]
authors = ["soniamitchell <sonia.mitchell@glasgow.ac.uk>"]
description = ""
license = "MIT"
name = "aoc2019"
readme = "README.rst"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.22.4"
python = "^3.10"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
flake8 = "^4.0.1"
ipykernel = "^6.15.0"
mkdocs = "^1.3.0"
mkdocstrings = "^0.19.0"
mypy = "^0.961"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
